--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,22 +44,26 @@ jobs:
     - name: Bump version and create tag
       id: tag_version
       run: |
-        # Bump the version number (simple example, increments a patch version)
+        # Ensure the version file exists
         VERSION_FILE="version.txt"
         if [ ! -f $VERSION_FILE ]; then echo "0.0.0" > $VERSION_FILE; fi
+        
+        # Read and increment the version number
         VERSION=$(cat $VERSION_FILE)
         IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
         PATCH=${VERSION_PARTS[2]}
         PATCH=$((PATCH+1))
         NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$PATCH"
-        echo $NEW_VERSION > $VERSION_FILE
 
-        # Commit and tag the new version
+        # Update version file
+        echo $NEW_VERSION > $VERSION_FILE
+        
+        # Commit the new version and tag it
         git config --local user.name "GitHub Action"
         git config --local user.email "action@github.com"
         git add $VERSION_FILE
         git commit -m "Bump version to $NEW_VERSION"
-        git tag "v$NEW_VERSION"
+        git tag -a "v$NEW_VERSION" -m "Version $NEW_VERSION"
 
     - name: Push tag to the repository
       run: |
@@ -73,4 +77,3 @@ jobs:
         tag: "v$(cat version.txt)"
         name: "Release v$(cat version.txt)"
         body: "Automated release for version v$(cat version.txt)"
-
