--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,24 +41,27 @@ jobs:
         name: build
         path: build/libs/*.jar
 
-    - name: Bump version and create tag
+    - name: Ensure version file exists and create tag
       id: tag_version
       run: |
-        # Ensure the version file exists
         VERSION_FILE="version.txt"
-        if [ ! -f $VERSION_FILE ]; then echo "0.0.0" > $VERSION_FILE; fi
+        
+        # Ensure the version file exists or create a new one
+        if [ ! -f "$VERSION_FILE" ]; then 
+          echo "Creating version file with initial version 0.0.0"
+          echo "0.0.0" > $VERSION_FILE; 
+        fi
         
         # Read and increment the version number
         VERSION=$(cat $VERSION_FILE)
         IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
+        MAJOR=${VERSION_PARTS[0]}
+        MINOR=${VERSION_PARTS[1]}
         PATCH=${VERSION_PARTS[2]}
         
-        # Loop to find the next available tag version
-        while git rev-parse "v${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$PATCH" >/dev/null 2>&1; do
-          PATCH=$((PATCH+1))
-        done
-        
-        NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$PATCH"
+        # Increment the patch version
+        PATCH=$((PATCH + 1))
+        NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
         
         # Ensure the new tag is in the correct format
         TAG_NAME="v$NEW_VERSION"
@@ -76,6 +79,10 @@ jobs:
 
     - name: Push tag to the repository
       run: |
+        if [ -z "$TAG_NAME" ]; then
+          echo "Error: TAG_NAME is empty before pushing"
+          exit 1
+        fi
         git push origin "$TAG_NAME"
 
     - name: Publish to GitHub Releases
