--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
+
     - name: Build with Gradle
       run: ./gradlew build
 
@@ -40,79 +41,43 @@ jobs:
         name: build
         path: build/libs/*.jar
 
-    - name: Ensure version file exists and create tag
-      id: tag_version
+    - name: Generate and push tag
+      id: generate_tag
       run: |
-        VERSION_FILE="version.txt"
+        # Start with version 0.0.1
+        VERSION="0.0.1"
         
-        # Ensure the version file exists or create a new one
-        if [ ! -f "$VERSION_FILE" ]; then 
-          echo "Creating version file with initial version 0.0.0"
-          echo "0.0.0" > $VERSION_FILE; 
-        fi
-        
-        # Read and increment the version number
-        VERSION=$(cat $VERSION_FILE)
-        IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
-        MAJOR=${VERSION_PARTS[0]}
-        MINOR=${VERSION_PARTS[1]}
-        PATCH=${VERSION_PARTS[2]}
-        
-        # Increment the patch version
-        PATCH=$((PATCH + 1))
-        NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-        
-        # Ensure the new tag is in the correct format
-        TAG_NAME="v$NEW_VERSION"
-        echo "Generated tag: $TAG_NAME"
-        
-        # Update version file
-        echo $NEW_VERSION > $VERSION_FILE
-        
-        # Commit the new version and tag it
-        git config --local user.name "GitHub Action"
-        git config --local user.email "action@github.com"
-        git add $VERSION_FILE
-        git commit -m "Bump version to $NEW_VERSION"
-        git tag -a "$TAG_NAME" -m "Version $NEW_VERSION"
-        
-        # Set output for the next steps
-        echo "::set-output name=tag_name::$TAG_NAME"
-    - name: Check if tag exists and handle conflicts
-      id: check_tag
-      run: |
-        TAG_EXISTS=false
+        # Loop until a new tag can be created
         while true; do
-          if git ls-remote --tags origin | grep -q "refs/tags/${{ steps.tag_version.outputs.tag_name }}$"; then
-            echo "Tag ${{ steps.tag_version.outputs.tag_name }} already exists"
-            TAG_EXISTS=true
-            # Increment the patch version again
-            VERSION=$(cat $VERSION_FILE)
+          TAG_NAME="v$VERSION"
+          if git ls-remote --tags origin | grep -q "refs/tags/$TAG_NAME$"; then
+            echo "Tag $TAG_NAME already exists, incrementing version"
             IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
             MAJOR=${VERSION_PARTS[0]}
             MINOR=${VERSION_PARTS[1]}
             PATCH=${VERSION_PARTS[2]}
             PATCH=$((PATCH + 1))
-            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-            TAG_NAME="v$NEW_VERSION"
-            echo "Generated new tag: $TAG_NAME"
-            echo $NEW_VERSION > $VERSION_FILE
-            git tag -d "${{ steps.tag_version.outputs.tag_name }}"
-            git tag -a "$TAG_NAME" -m "Version $NEW_VERSION"
-            echo "::set-output name=tag_name::$TAG_NAME"
+            VERSION="$MAJOR.$MINOR.$PATCH"
           else
+            echo "Generated new tag: $TAG_NAME"
             break
           fi
         done
-        echo "::set-output name=tag_exists::$TAG_EXISTS"
-    - name: Push tag to the repository
-      run: |
-        git push origin "${{ steps.check_tag.outputs.tag_name }}"
+        
+        # Create and push the new tag
+        git config --local user.name "GitHub Action"
+        git config --local user.email "action@github.com"
+        git tag -a "$TAG_NAME" -m "Version $VERSION"
+        git push origin "$TAG_NAME"
+        
+        # Set output for the next steps
+        echo "::set-output name=tag_name::$TAG_NAME"
+
     - name: Publish to GitHub Releases
       uses: ncipollo/release-action@v1
       with:
         artifacts: build/libs/*.jar
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: "${{ steps.check_tag.outputs.tag_name }}"
-        name: "Release ${{ steps.check_tag.outputs.tag_name }}"
-        body: "Automated release for version ${{ steps.check_tag.outputs.tag_name }}"
+        tag: "${{ steps.generate_tag.outputs.tag_name }}"
+        name: "Release ${{ steps.generate_tag.outputs.tag_name }}"
+        body: "Automated release for version ${{ steps.generate_tag.outputs.tag_name }}"
